# snowflake_ml_template

./: .bandit  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .trufflehogignore  ARCHITECTURE.md  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  vehicle_fraud.ipynb  vehicle_insurance_fraud_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_deploy.yml  docs.yml  pre-commit.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  security-scan.yml
docs/: DEVELOPMENT.md  conf.py  index.rst  modules.rst  requirements.txt
notebooks/data_engineering/: sample.ipynb
notebooks/data_science/: environment.yml  sample.ipynb  test_file.ipynb
notebooks/experiments/: sample.ipynb
scripts/snowflake/ddl/: 01_create_file_format.sql  01_test_ddl.sql  02_create_stage.sql  03_create_tables.sql  04_create_processed_table.sql  04_create_stream.sql  05_create_dynamic_table.sql  06_create_dynamic_table.sql
scripts/snowflake/pipeline/: 01_copy_into_raw.sql  02_process_stream.sql
src/datasets/vehicle_insurance_fraud/: README.md
src/snowflake_ml_template/: __init__.py
src/snowflake_ml_template/core/: __init__.py
src/snowflake_ml_template/core/base/: __init__.py  deployment.py  ingestion.py  pipeline.py  tracking.py  training.py  transformation.py
src/snowflake_ml_template/core/config/: __init__.py  loader.py  models.py  validator.py
src/snowflake_ml_template/core/exceptions/: __init__.py  errors.py
src/snowflake_ml_template/core/session/: __init__.py  context.py  manager.py
src/snowflake_ml_template/deployment/: __init__.py  orchestrator.py
src/snowflake_ml_template/deployment/strategies/: __init__.py  spcs.py  warehouse_udf.py
src/snowflake_ml_template/dynamic/: __init__.py  templates.py
src/snowflake_ml_template/feature_store/: __init__.py  api.py
src/snowflake_ml_template/feature_store/core/: __init__.py  entity.py  feature_view.py  store.py
src/snowflake_ml_template/feature_store/monitoring/: __init__.py  drift.py  quality.py
src/snowflake_ml_template/feature_store/serving/: __init__.py  batch.py
src/snowflake_ml_template/feature_store/versioning/: __init__.py  lineage.py  manager.py
src/snowflake_ml_template/infra/: __init__.py  credentials.py  ddl_templates.py
src/snowflake_ml_template/infrastructure/: __init__.py
src/snowflake_ml_template/infrastructure/provisioning/: __init__.py  base.py  databases.py  roles.py  schemas.py  stages.py  warehouses.py
src/snowflake_ml_template/ingest/: __init__.py  templates.py
src/snowflake_ml_template/ingestion/: __init__.py  orchestrator.py  streaming.py
src/snowflake_ml_template/ingestion/strategies/: __init__.py  copy_into.py  (+1 more)
src/snowflake_ml_template/monitoring/: __init__.py  data_monitor.py  infrastructure_monitor.py  model_monitor.py  templates.py
src/snowflake_ml_template/orchestration/: __init__.py  streams.py  tasks.py
src/snowflake_ml_template/pipelines/: README.md  __init__.py  creditcard_pipeline.py  tasks.py
src/snowflake_ml_template/registry/: __init__.py  manager.py
src/snowflake_ml_template/snowpark/: __init__.py  helpers.py
src/snowflake_ml_template/staging/: __init__.py  templates.py
src/snowflake_ml_template/training/: __init__.py  orchestrator.py  sproc.py
src/snowflake_ml_template/transform/: __init__.py  helpers.py
src/snowflake_ml_template/utils/: __init__.py  data_quality_utils.py  feature_selection_utils.py  logger.py  ml_utils.py  model_utils.py  session.py  transform_utils.py
tests/: conftest.py  test_creditcard_pipeline.py  test_debug_import.py  test_infra_templates.py  test_mocks.py  test_phase2_templates.py  test_smoke_imports.py  test_snowpark_helpers.py  test_training_and_utils.py
tests/integration/: test_end_to_end_pipeline.py  test_ingestion_deployment_flow.py  test_multi_framework_training.py  test_registry_promotion_workflow.py
tests/unit/test_core/: __init__.py  test_base_deployment.py  test_base_ingestion.py  test_base_pipeline.py  test_base_training.py  test_base_transformation.py  test_config_loader.py  test_config_validator.py  test_exceptions.py  test_session_context.py  test_session_manager.py
tests/unit/test_deployment/: test_deployment_strategies.py
tests/unit/test_feature_store/: test_batch_server.py  test_core_store.py  test_drift_detection.py  test_entity.py  test_integration_governance_monitoring.py  test_lineage.py  test_lineage_edges.py  test_lineage_tracker.py  test_monitoring_drift.py  test_quality_monitor.py  test_serving_batch.py  test_serving_batch_asof.py  test_version_manager.py
tests/unit/test_infrastructure/: test_databases.py  test_provisioners.py  test_roles.py  test_schemas.py  test_stages.py  test_warehouses.py
tests/unit/test_ingestion/: test_ingestion_init.py  test_ingestion_strategies.py  test_ingestion_strategies_failures.py  test_orchestrator_core.py
tests/unit/test_monitoring/: test_monitors.py
tests/unit/test_orchestration/: test_orchestration.py  test_streams.py  test_tasks.py
tests/unit/test_pipelines/: test_pipeline_template.py
tests/unit/test_registry/: test_manager.py  test_registry.py
tests/unit/test_training/: test_trainers.py
tests/unit/test_utils/: test_data_quality_utils.py  test_feature_selection_utils.py  test_logging.py  test_logging_formatters.py  test_ml_utils.py  test_model_utils.py  test_transform_utils.py
(+14 files in other folders)
