[metadata]
name = snowflake-ml-template
version = 0.1.0
description = A comprehensive template for building scalable ML pipelines on Snowflake
long_description = file: README.md
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # keep minimal for editable install; dev deps are in pyproject optional-deps

[tool:pytest]
testpaths = tests
